syntax = "proto3";

option csharp_namespace = "Larp.Proto.FifthEdition";

package larp.accounts.e5;

message Character {
    int32 account_id = 1;
    string name = 2;
}